<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Drimer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="time_to_next_drink">Time to next drink</string>
    <string name="drinks_remaining">Drinks remaining</string>
    <string name="starting_value">--</string>
    <string name="go_button">Start</string>
    <string name="slash">/</string>

</resources>
