<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pwnasaur.drimer.MainActivity"
    tools:ignore="MergeRootFrame" >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="10px">
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/ttndContainer"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3">
            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight=".4"
                android:gravity="center"
                android:textSize="50px"
                android:text="@string/time_to_next_drink" />
            <TextView
                android:id="@+id/tvTimeToNextDrink"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight=".6"
                android:gravity="center"
                android:textSize="130px"
                android:text="@string/starting_value"
                />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/drinksLeftContainer"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3">
            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight=".4"
                android:gravity="center"
                android:textSize="50px"
                android:text="@string/drinks_remaining" />
            <TextView
                android:id="@+id/tvDrinksLeft"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight=".6"
                android:gravity="center"
                android:textSize="130px"
                android:text="@string/starting_value"
                />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/statusContainer"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.6"
                android:layout_marginRight="20px"
                >
                <TextView
                    android:id="@+id/tvDrinksSoFar"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight=".45"
                    android:gravity="center"
                    android:textSize="130px"
                    android:text="0" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight=".1"
                    android:gravity="center"
                    android:textSize="100px"
                    android:text="@string/slash" />
                <TextView
                    android:id="@+id/tvTotalDrinks"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight=".45"
                    android:gravity="center"
                    android:textSize="130px"
                    android:text="@string/starting_value"
                    />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="150px"
                    android:layout_weight=".4"
                    android:layout_gravity="center"
                    >
                    <Button
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_margin="10px"
                        android:id="@+id/btnStart"
                        android:text="@string/go_button"
                        android:onClick="btnStart_Click"
                        />
                </LinearLayout>
            </LinearLayout>
    </LinearLayout>
</FrameLayout>
